update page after getting upstream changes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,223 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{unequal_diffusion,
+  title={Structural Determinants of Unequal Diffusion in Networks: The case of Brokerage},
+  author={Jahani, E. and Eckles, D., and Pentland, A.},
+	abstract={
+	We develop a theoretical network model that captures the network structure of unequal
+	diffusion.  First, we argue that homophily alone does not fully
+	explain the extent of unequal diffusion in the network.  We show that any departure from
+	the uniform distribution of links to information sources among members of a group limits
+	the diffusion of information to the group as a whole. The variation from equal
+	opportunity baseline not only has first order effects since some individuals will have
+	fewer direct links to information sources, but also second order effects as the whole
+	group will have fewer diffusion paths to the information sources.  Second, we show
+	empirically that most networks exhibit higher susceptibility to unequal diffusion across
+	various grouping variables (e.g. gender or race) than expected simply by measures of
+	homophily. Finally, we develop a variant of the Stochastic Block Model that
+	parameterizes the cross-group linking of each node and by doing so fits not only
+	assortativity on paths of length 1, but also diffusion assortativity on paths of
+	length 2 and 3.
+	},
+	category={Working papers}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{long_ties_formation,
+ title={Origins and consequences of long ties in social networks},
+ url={osf.io/preprints/socarxiv/g2nkq},
+ DOI={10.31235/osf.io/g2nkq},
+ publisher={SocArXiv},
+ author={Jahani, E. and Fraiberger, S. and Bailey, M. and Eckles, D.},
+ year={2022},
+ month={Jan},
+ abstract={
+	 Social networks play a predominant role in determining how information spreads between
+	 individuals. Previous works suggest that long ties, which connect people who do not
+	 share any mutual contact, provide access to valuable information on economic
+	 opportunities. However, no population-scale study has determined how long ties relate
+	 to economic outcomes and how such ties are formed. Using a novel dataset from
+	 Facebook, we reconstruct the network of interactions between users and we uncover a
+	 strong relationship between the share of long ties and economic outcomes at the local
+	 level in the United States and in Mexico. Administrative units with a higher
+	 proportion of long ties have higher incomes, higher economic mobility, lower
+	 unemployment rates and higher wealth, even after adjusting for potential confounders
+	 of these outcomes. In contrast to the weak tie theory, we find that having stronger
+	 long ties is associated with better economic outcomes. Furthermore, we discover that
+	 users with a higher proportion of long ties are more likely to have migrated between
+	 US states, to have transferred to a different high school, and to have attended
+	 college outside of their home state. Taken together, these results suggest that long
+	 ties contribute to economic prosperity and highlight the role played by disruptive
+	 life events in the formation of these ties.},
+ 	html={https://osf.io/preprints/socarxiv/g2nkq/},
+	category={Working papers}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+
+@article{long_ties_fundraising,
+  title={Tie Strength and Length in Social Capital: Evidence from Charitable Fundraising},
+  author={Jahani, E. and Bailey, M. and Eckles, D.},
+	abstract={
+		We contribute to the literature on network structure and performance by studying the
+		local network structure around individuals with the best outcomes. We propose the
+		concept of bandwidth-diversity matching, according to which individuals who match
+		the tie strength to their contacts with their structural novelty achieve truly
+		diverse networks and obtain better outcomes. We investigate this in the context of
+		birthday fundraisers on Facebook. We show that users whose networks is composed of
+		a mixture of short embedded ties and long ties are more likely to reach their
+		fundraiser goal than those with one type exclusively. More importantly, the
+		stronger the long ties are, the more successful the campaign will be. In other
+		words, the most successful fundraisers occur when the ego has cultivated a mix of
+		embedded ties and strong-long ties.},
+	category={Working papers}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@article{inequality_experiment,
+  title={Rivalrous Resource Sharing in Networks can Exacerbate Existing Inequalities},
+  author={Jahani, E. and Eckles, D.},
+	abstract={
+		We examine the network mechanisms that widen inter-group differences and lead to different
+		levels of  social capital in different groups. We study an information sharing game, in
+		which individuals have to compete for a rivalrous resource over repeated rounds. The
+		equilibrium predicts lower cooperation among lower status agents, which leads the whole
+		group to receive a small share of the common resource. We further validate this
+		prediction in an online lab experiment by recruiting individuals to play an online
+		collaborative game in which they have to find and dig gold mines and in the process can
+		pass information to their neighbors according to the network structure. The players
+		which had a lower chance of receiving the gold were less likely to share it with their
+		contacts. As a result, these low status players took ``a smaller share of the pie'' than
+		what was expected by their individual differences.
+	},
+	category={Working papers}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{common_enemy,
+  title={Exposure to Common Enemies can Increase Political Polarization: Evidence from an Experiment with Automated Partisans},
+  author={Jahani, E. and Gallagher, N., and Merhout, F., and Cavalli, N., and Guilbeault, D., and Leng, Y., and Bail, C.},
+	abstract={Simple abstract and description of the experiment},
+  journal={Under Review.},
+	year = {2020},
+	abstract={Longstanding theory indicates a common enemy can mitigate conflict between
+	members of rival groups. We tested this hypothesis in a pre-registered experiment
+	where 1,670 Republicans and Democrats in the United States were asked to complete a
+	collaborative online task with an automated agent or ``bot" that was labelled as a
+	member of the opposing party. Prior to this task, we exposed respondents to primes
+	about a) a common enemy (involving threats from Iran, China, and Russia); b) a
+	patriotic event; or c) a neutral, apolitical prime. Though we observed no
+	significant differences in the behavior of Democrats as a result of these primes, we
+	found that Republicans—and particularly those with very strong conservative
+	views—were significantly less likely to cooperate with Democrats when primed about a
+	common enemy. We also observed lower rates of cooperation among Republicans who
+	participated in our study during the 2020 Iran crisis, which occurred in the middle
+	of our data collection. These findings indicate common enemies may not reduce
+	inter-group conflict in highly polarized societies, and contribute to a growing
+	number of studies that find evidence of asymmetric political polarization. We
+	conclude by discussing the implications of these findings for research in social
+	psychology, political conflict, and the rapidly expanding field of computational
+	social science.},
+	category={Refereed}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+
+@article{misinformation_whatsapp,
+  author = {Pasquetto, Irene V. and Jahani, Eaman and Atreja, Shubham and Baum, Matthew},
+  title = {Social Debunking of Misinformation on WhatsApp: The Case for Strong and In-Group Ties},
+  year = {2022},
+  issue_date = {April 2022},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {6},
+  number = {CSCW1},
+  url = {https://doi.org/10.1145/3512964},
+  html = {https://dl.acm.org/doi/abs/10.1145/3512964},
+	pdf = {whatsapp_misinfo.pdf},
+  doi = {10.1145/3512964},
+  abstract = {In this paper, we argue that WhatsApp can play an important role in correcting misinformation. We show how specific WhatsApp affordances (flexibility in format and audience selection) and existing social capital (prevalence of strong ties; homophily in political groups) can be leveraged to maximize the re-sharing of debunking messages, such as those accessed by WhatsApp users via ChatBots and Tip-Lines. Debunking messages received in the format of audio files generated more interest and were more effective in correcting beliefs than text- or image-based messages. In addition, we found clear evidence that users re-share debunks at higher rates when they received them from people close to them (strong ties), from individuals who generally agree with them politically (in-group members), or when both conditions are met. We suggest that WhatsApp leverages our findings to maximize the re-share of those fact-checks that are already circulating on the platform by using the existing social capital in the network, unlocking the potential for such debunks to reach a larger audience on WhatsApp.},
+  journal = {Proc. ACM Hum.-Comput. Interact.},
+  month = {apr},
+  articleno = {117},
+  numpages = {35},
+	category = {Refereed},
 }
+
+@article{jahani2018scamcoin,
+	author = {Jahani, E., and Krafft, P., and Suhara, Y., and Moro, E., and Pentland, A.},
+	title = {ScamCoins, S*** Posters, and the Search for the Next Bitcoin<sup>TM</sup>: Collective Sensemaking in Cryptocurrency Discussions},
+	year = {2018},
+	issue_date = {November 2018},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {2},
+	number = {CSCW},
+	url = {https://doi.org/10.1145/3274348},
+	html = {https://dl.acm.org/doi/abs/10.1145/3274348},
+	pdf={cscw.pdf},
+	doi = {10.1145/3274348},
+	abstract = {Participants in cryptocurrency markets are in constant communication with each other about the latest coins and news releases. Do these conversations build hype through the contagiousness of excitement, help the community process information, or play some other role? Using a novel dataset from a major cryptocurrency forum, we conduct an exploratory study of the characteristics of online discussion around cryptocurrencies. Through a regression analysis, we find that coins with more information available and higher levels of technical innovation are associated with higher quality discussion. People who talk about "serious" coins tend to participate in discussion displaying signatures of collective intelligence and information processing, while people who talk about "less serious" coins tend to display signatures of hype and na\"{\i}vety. Interviews with experienced forum members also confirm these quantitative findings. These results highlight the varied roles of discussion in the cryptocurrency ecosystem and suggest that discussion of serious coins may be oriented towards earnest, perhaps more accurate, attempts at discovering which coins are likely to succeed.},
+	journal = {Proc. ACM Hum.-Comput. Interact.},
+	month = nov,
+	articleno = {79},
+	numpages = {28},
+	category={Refereed},
+	keywords = {computational social science, online discussion, cryptocurrency, information processin, collective intelligence},
+}
+
+@article{jahani2017improving,
+  title={Improving official statistics in emerging markets using machine learning and mobile phone data},
+  author={Jahani, E., and Sunds{\o}y, P., and Bjelland, J., and Bengtsson, L., and Pentland, A., and de Montjoye, Y.},
+  journal={EPJ Data Science},
+  volume={6},
+  number={1},
+  pages={3},
+  year={2017},
+	issue_date = {June 2017},
+	abstract = {Mobile phones are one of the fastest growing technologies in the developing
+	world with global penetration rates reaching 90\%. Mobile phone data, also called CDR,
+	are generated everytime phones are used and recorded by carriers at scale. CDR have
+	generated groundbreaking insights in public health, official statistics, and
+	logistics. However, the fact that most phones in developing countries are prepaid
+	means that the data lacks key information about the user, including gender and other
+	demographic variables. This precludes numerous uses of this data in social science
+	and development economic research. It furthermore severely prevents the development
+	of humanitarian applications such as the use of mobile phone data to target aid
+	towards the most vulnerable groups during crisis. We developed a framework to
+	extract more than 1400 features from standard mobile phone data and used them to
+	predict useful individual characteristics and group estimates. We here present a
+	systematic cross-country study of the applicability of machine learning for dataset
+	augmentation at low cost. We validate our framework by showing how it can be used to
+	reliably predict gender and other information for more than half a million people in
+	two countries. We show how standard machine learning algorithms trained on only
+	10,000 users are sufficient to predict individual’s gender with an accuracy ranging
+	from 74.3 to 88.4\% in a developed country and from 74.5 to 79.7\% in a developing
+	country using only metadata. This is significantly higher than previous approaches
+	and, once calibrated, gives highly accurate estimates of gender balance in groups.
+	Performance suffers only marginally if we reduce the training size to 5,000, but
+	significantly decreases in a smaller training set. We finally show that our
+	indicators capture a large range of behavioral traits using factor analysis and that
+	the framework can be used to predict other indicators of vulnerability such as age
+	or socio-economic status. Mobile phone data has a great potential for good and our
+	framework allows this data to be augmented with vulnerability and other information
+	at a fraction of the cost.},
+  publisher={Springer},
+	url={https://doi.org/10.1140/epjds/s13688-017-0099-3},
+	doi={10.1140/epjds/s13688-017-0099-3},
+	category={Refereed},
+	html = {https://link.springer.com/article/10.1140/epjds/s13688-017-0099-3},
+	pdf={epj.pdf},
+}
+
+
+@InProceedings{jahani2017differential,
+	author="Jahani, E., and Saint-Jacques, G., and Sunds{\o}y, P., and Bjelland, J., and Moro, E., and Pentland, A.",
+	title="Differential Network Effects on Economic Outcomes: A Structural Perspective",
+	booktitle="Social Informatics.",
+	year="2017",
+	publisher="Springer International Publishing",
+	address="Cham",
+	pages="41--50",
+	abstract="In a study of about 33,000 individuals in a south Asian country, we find that structural diversity, measured as the fraction of open triads in an ego-network, shows a relatively strong association with individual income. After including all the relevant control variables, the effect of structural diversity becomes exclusive to the highly educated individuals. We hypothesize these results are due to concentrated distribution of economic opportunities among the highly educated social strata combined with homophily among members of the same group. This process leads to two important societal consequences: extra network advantages for the highly educated, similar to the rich club effect, and inadequate diffusion of economic opportunities to the low educated social strata.",
+	isbn="978-3-319-67256-4",
+	category={Lightly refereed},
+	html = {https://link.springer.com/chapter/10.1007/978-3-319-67256-4_5},
+	pdf={socInfo.pdf},
+}
+
