minor fixes, font size and removing dropdown

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @article{unequal_diffusion,
   title={Structural Determinants of Unequal Diffusion in Networks: The case of Brokerage},
-  author={Jahani, E. and Eckles, D., and Pentland, A.},
+  author={Jahani, Eaman and Eckles, Dean, and Pentland, Alex},
 	abstract={
 	We develop a theoretical network model that captures the network structure of unequal
 	diffusion.  First, we argue that homophily alone does not fully
@@ -25,7 +25,7 @@
  url={osf.io/preprints/socarxiv/g2nkq},
  DOI={10.31235/osf.io/g2nkq},
  publisher={SocArXiv},
- author={Jahani, E. and Fraiberger, S. and Bailey, M. and Eckles, D.},
+ author={Jahani, Eaman and Fraiberger, Sam and Bailey, Michael and Eckles, Dean},
  year={2022},
  month={Jan},
  abstract={
@@ -53,7 +53,7 @@
 
 @article{long_ties_fundraising,
   title={Tie Strength and Length in Social Capital: Evidence from Charitable Fundraising},
-  author={Jahani, E. and Bailey, M. and Eckles, D.},
+  author={Jahani, Eaman and Bailey, Michael and Eckles, Dean},
 	abstract={
 		We contribute to the literature on network structure and performance by studying the
 		local network structure around individuals with the best outcomes. We propose the
@@ -72,7 +72,7 @@
 
 @article{inequality_experiment,
   title={Rivalrous Resource Sharing in Networks can Exacerbate Existing Inequalities},
-  author={Jahani, E. and Eckles, D.},
+  author={Jahani, Eaman and Eckles, Dean},
 	abstract={
 		We examine the network mechanisms that widen inter-group differences and lead to different
 		levels of  social capital in different groups. We study an information sharing game, in
@@ -92,7 +92,8 @@
 
 @article{common_enemy,
   title={Exposure to Common Enemies can Increase Political Polarization: Evidence from an Experiment with Automated Partisans},
-  author={Jahani, E. and Gallagher, N., and Merhout, F., and Cavalli, N., and Guilbeault, D., and Leng, Y., and Bail, C.},
+  author={Jahani, Eaman and Gallagher, Natalie, and Merhout, Friedolin, and Cavalli,
+    Nicoolo, and Guilbeault, Douglas, and Leng, Yan, and Bail, Christopher},
 	abstract={Simple abstract and description of the experiment},
   journal={Under Review.},
 	year = {2020},
@@ -140,7 +141,7 @@
 }
 
 @article{jahani2018scamcoin,
-	author = {Jahani, E., and Krafft, P., and Suhara, Y., and Moro, E., and Pentland, A.},
+	author = {Jahani, Eaman, and Krafft, Peter, and Suhara, Yoshiko, and Moro, Esteban, and Pentland, Alex},
 	title = {ScamCoins, S*** Posters, and the Search for the Next Bitcoin<sup>TM</sup>: Collective Sensemaking in Cryptocurrency Discussions},
 	year = {2018},
 	issue_date = {November 2018},
@@ -163,7 +164,8 @@
 
 @article{jahani2017improving,
   title={Improving official statistics in emerging markets using machine learning and mobile phone data},
-  author={Jahani, E., and Sunds{\o}y, P., and Bjelland, J., and Bengtsson, L., and Pentland, A., and de Montjoye, Y.},
+  author={Jahani, Eaman, and Sunds{\o}y, Pal, and Bjelland, Johannes, and Bengtsson,
+    Linus, and Pentland, Alex, and de Montjoye, Yves Alexandre},
   journal={EPJ Data Science},
   volume={6},
   number={1},
@@ -207,7 +209,7 @@
 
 
 @InProceedings{jahani2017differential,
-	author="Jahani, E., and Saint-Jacques, G., and Sunds{\o}y, P., and Bjelland, J., and Moro, E., and Pentland, A.",
+	author="Jahani, Eaman, and Saint-Jacques, Guillaume, and Sunds{\o}y, Pal, and Bjelland, Johannes, and Moro, Esteban, and Pentland, Alex",
 	title="Differential Network Effects on Economic Outcomes: A Structural Perspective",
 	booktitle="Social Informatics.",
 	year="2017",
