upper case and update paper link

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -91,10 +91,13 @@
 
 
 @article{common_enemy,
-  title={Exposure to Common Enemies can Increase Political Polarization: Evidence from an Experiment with Automated Partisans},
-  author={Jahani, Eaman and Gallagher, Natalie, and Merhout, Friedolin, and Cavalli,
-    Nicoolo, and Guilbeault, Douglas, and Leng, Yan, and Bail, Christopher},
-	abstract={Simple abstract and description of the experiment},
+  title={Exposure to Common Enemies can Increase Political Polarization: Evidence from a Cooperation Experiment with Automated Partisans},
+  url={osf.io/preprints/socarxiv/x2dby},
+  DOI={10.31235/osf.io/x2dby},
+  publisher={SocArXiv},
+  author={Jahani, Eaman and Gallagher, Natalie M and Merhout, Friedolin and Cavalli, Nicolo and Guilbeault, Douglas and Leng, Yan and Bail, Christopher A},
+  year={2020},
+  month={Nov},
   journal={Under Review.},
 	year = {2020},
 	abstract={Longstanding theory indicates a common enemy can mitigate conflict between
@@ -115,6 +118,7 @@
 	conclude by discussing the implications of these findings for research in social
 	psychology, political conflict, and the rapidly expanding field of computational
 	social science.},
+ 	html={https://osf.io/preprints/socarxiv/x2dby/},
 	category={Refereed}
 }
 
