add new cv and pdfs to some papers that are not online

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,36 +20,6 @@
 	category={Working papers}
 }
 
-@article{long_ties_formation,
- title={Origins and consequences of long ties in social networks},
- url={osf.io/preprints/socarxiv/g2nkq},
- DOI={10.31235/osf.io/g2nkq},
- publisher={SocArXiv},
- author={Jahani, Eaman and Fraiberger, Sam and Bailey, Michael and Eckles, Dean},
- year={2022},
- month={Jan},
- abstract={
-	 Social networks play a predominant role in determining how information spreads between
-	 individuals. Previous works suggest that long ties, which connect people who do not
-	 share any mutual contact, provide access to valuable information on economic
-	 opportunities. However, no population-scale study has determined how long ties relate
-	 to economic outcomes and how such ties are formed. Using a novel dataset from
-	 Facebook, we reconstruct the network of interactions between users and we uncover a
-	 strong relationship between the share of long ties and economic outcomes at the local
-	 level in the United States and in Mexico. Administrative units with a higher
-	 proportion of long ties have higher incomes, higher economic mobility, lower
-	 unemployment rates and higher wealth, even after adjusting for potential confounders
-	 of these outcomes. In contrast to the weak tie theory, we find that having stronger
-	 long ties is associated with better economic outcomes. Furthermore, we discover that
-	 users with a higher proportion of long ties are more likely to have migrated between
-	 US states, to have transferred to a different high school, and to have attended
-	 college outside of their home state. Taken together, these results suggest that long
-	 ties contribute to economic prosperity and highlight the role played by disruptive
-	 life events in the formation of these ties.},
- 	html={https://osf.io/preprints/socarxiv/g2nkq/},
-	category={Working papers}
-}
-
 
 @article{long_ties_fundraising,
   title={Tie Strength and Length in Social Capital: Evidence from Charitable Fundraising},
@@ -86,9 +56,40 @@
 		contacts. As a result, these low status players took ``a smaller share of the pie'' than
 		what was expected by their individual differences.
 	},
-	category={Working papers}
+	category={Working papers},
+	pdf={rivalrous_resource_sharing_in_networks.pdf},
 }
 
+@article{long_ties_formation,
+ title={Origins and consequences of long ties in social networks},
+ url={osf.io/preprints/socarxiv/g2nkq},
+ DOI={10.31235/osf.io/g2nkq},
+ publisher={SocArXiv},
+ author={Jahani, Eaman and Fraiberger, Sam and Bailey, Michael and Eckles, Dean},
+ year={2022},
+ month={June},
+ journal={Revise and Resubmit},
+ abstract={
+	 Social networks play a predominant role in determining how information spreads between
+	 individuals. Previous works suggest that long ties, which connect people who do not
+	 share any mutual contact, provide access to valuable information on economic
+	 opportunities. However, no population-scale study has determined how long ties relate
+	 to economic outcomes and how such ties are formed. Using a novel dataset from
+	 Facebook, we reconstruct the network of interactions between users and we uncover a
+	 strong relationship between the share of long ties and economic outcomes at the local
+	 level in the United States and in Mexico. Administrative units with a higher
+	 proportion of long ties have higher incomes, higher economic mobility, lower
+	 unemployment rates and higher wealth, even after adjusting for potential confounders
+	 of these outcomes. In contrast to the weak tie theory, we find that having stronger
+	 long ties is associated with better economic outcomes. Furthermore, we discover that
+	 users with a higher proportion of long ties are more likely to have migrated between
+	 US states, to have transferred to a different high school, and to have attended
+	 college outside of their home state. Taken together, these results suggest that long
+	 ties contribute to economic prosperity and highlight the role played by disruptive
+	 life events in the formation of these ties.},
+ 	html={https://osf.io/preprints/socarxiv/g2nkq/},
+	category={Refereed}
+}
 
 @article{common_enemy,
   title={Exposure to Common Enemies can Increase Political Polarization: Evidence from a Cooperation Experiment with Automated Partisans},
@@ -96,10 +97,10 @@
   DOI={10.31235/osf.io/x2dby},
   publisher={SocArXiv},
   author={Jahani, Eaman and Gallagher, Natalie M and Merhout, Friedolin and Cavalli, Nicolo and Guilbeault, Douglas and Leng, Yan and Bail, Christopher A},
-  year={2020},
-  month={Nov},
-  journal={Under Review.},
-	year = {2020},
+  year={2022},
+  month={July},
+  journal={Revise and Resubmit},
+	year = {2022},
 	abstract={Longstanding theory indicates a common enemy can mitigate conflict between
 	members of rival groups. We tested this hypothesis in a pre-registered experiment
 	where 1,670 Republicans and Democrats in the United States were asked to complete a
