add unequal diffusion paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,8 @@
 	assortativity on paths of length 1, but also diffusion assortativity on paths of
 	length 2 and 3.
 	},
-	category={Working papers}
+	category={Working papers},
+  pdf={Unequal_Diffusion_JASA.pdf}
 }
 
 
