--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -93,7 +93,7 @@
 }
 
 @article{common_enemy,
-  title={Exposure to Common Enemies can Increase Political Polarization: Evidence from a Cooperation Experiment with Automated Partisans},
+  title={A Randomized Online Experiment during the 2020 US-Iran Crisis shows that Exposure to Common Enemies can Increase Political Polarization},
   url={osf.io/preprints/socarxiv/x2dby},
   DOI={10.31235/osf.io/x2dby},
   publisher={SocArXiv},
@@ -121,9 +121,9 @@
 	psychology, political conflict, and the rapidly expanding field of computational
 	social science.},
  	html={https://osf.io/preprints/socarxiv/x2dby/},
+  pdf={Common_Enemies _MS_ScientificReports.pdf},
 	category={Refereed}
 }
-
 
 @article{misinformation_whatsapp,
   author = {Pasquetto, Irene V. and Jahani, Eaman and Atreja, Shubham and Baum, Matthew},
