update paper list

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,5 @@
 @article{unequal_diffusion,
-  title={Structural Determinants of Unequal Diffusion in Networks: The case of Brokerage},
+  title={Network Structure of Unequal Diffusion},
   author={Jahani, Eaman and Eckles, Dean, and Pentland, Alex},
 	abstract={
 	We develop a theoretical network model that captures the network structure of unequal
@@ -18,6 +18,7 @@
 	length 2 and 3.
 	},
 	category={Working papers},
+ 	html={https://arxiv.org/abs/2210.11053},
   pdf={Unequal_Diffusion_JASA.pdf}
 }
 
