news and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -94,15 +94,18 @@
 }
 
 @article{common_enemy,
-  title={A Randomized Online Experiment during the 2020 US-Iran Crisis shows that Exposure to Common Enemies can Increase Political Polarization},
-  url={osf.io/preprints/socarxiv/x2dby},
-  DOI={10.31235/osf.io/x2dby},
-  publisher={SocArXiv},
-  author={Jahani, Eaman and Gallagher, Natalie M and Merhout, Friedolin and Cavalli, Nicolo and Guilbeault, Douglas and Leng, Yan and Bail, Christopher A},
+  title={An Online experiment during the 2020 US--Iran crisis shows that exposure to common enemies can increase political polarization},
+  url={https://doi.org/10.1038/s41598-022-23673-0},
+  publisher={Nature Publishing Group},
+  author={Jahani, Eaman* and Gallagher, Natalie M* and Merhout, Friedolin* and Cavalli,
+    Nicolo* and Guilbeault, Douglas* and Leng, Yan* and Bail, Christopher A*},
   year={2022},
   month={July},
-  journal={Revise and Resubmit},
-	year = {2022},
+  journal={Scientific Reports},
+  volume={12},
+  number={1},
+  pages={1--8},
+  year={2022},
 	abstract={Longstanding theory indicates a common enemy can mitigate conflict between
 	members of rival groups. We tested this hypothesis in a pre-registered experiment
 	where 1,670 Republicans and Democrats in the United States were asked to complete a
@@ -121,7 +124,7 @@
 	conclude by discussing the implications of these findings for research in social
 	psychology, political conflict, and the rapidly expanding field of computational
 	social science.},
- 	html={https://osf.io/preprints/socarxiv/x2dby/},
+ 	html={https://rdcu.be/c0htY},
   pdf={Common_Enemies _MS_ScientificReports.pdf},
 	category={Refereed}
 }
