update long tie paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -70,7 +70,7 @@
  author={Jahani, Eaman and Fraiberger, Sam and Bailey, Michael and Eckles, Dean},
  year={2022},
  month={June},
- journal={Revise and Resubmit},
+ journal={Accepted at the Proceedings of the National Academy of Sciences},
  abstract={
 	 Social networks play a predominant role in determining how information spreads between
 	 individuals. Previous works suggest that long ties, which connect people who do not
