update paper title

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,7 +63,7 @@
 }
 
 @article{long_ties_formation,
- title={Origins and consequences of long ties in social networks},
+ title={Long ties, disruptive life events and economic prosperity},
  url={osf.io/preprints/socarxiv/g2nkq},
  DOI={10.31235/osf.io/g2nkq},
  publisher={SocArXiv},
