--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -62,36 +62,68 @@
 	pdf={rivalrous_resource_sharing_in_networks.pdf},
 }
 
+
 @article{long_ties_formation,
- title={Long ties, disruptive life events and economic prosperity},
- url={osf.io/preprints/socarxiv/g2nkq},
- DOI={10.31235/osf.io/g2nkq},
- publisher={SocArXiv},
- author={Jahani, Eaman and Fraiberger, Sam and Bailey, Michael and Eckles, Dean},
- year={2022},
- month={June},
- journal={Accepted at the Proceedings of the National Academy of Sciences},
- abstract={
-	 Social networks play a predominant role in determining how information spreads between
-	 individuals. Previous works suggest that long ties, which connect people who do not
-	 share any mutual contact, provide access to valuable information on economic
-	 opportunities. However, no population-scale study has determined how long ties relate
-	 to economic outcomes and how such ties are formed. Using a novel dataset from
-	 Facebook, we reconstruct the network of interactions between users and we uncover a
-	 strong relationship between the share of long ties and economic outcomes at the local
-	 level in the United States and in Mexico. Administrative units with a higher
-	 proportion of long ties have higher incomes, higher economic mobility, lower
-	 unemployment rates and higher wealth, even after adjusting for potential confounders
-	 of these outcomes. In contrast to the weak tie theory, we find that having stronger
-	 long ties is associated with better economic outcomes. Furthermore, we discover that
-	 users with a higher proportion of long ties are more likely to have migrated between
-	 US states, to have transferred to a different high school, and to have attended
-	 college outside of their home state. Taken together, these results suggest that long
-	 ties contribute to economic prosperity and highlight the role played by disruptive
-	 life events in the formation of these ties.},
- 	html={https://osf.io/preprints/socarxiv/g2nkq/},
+  author = {Eaman Jahani  and Samuel P. Fraiberger  and Michael Bailey  and Dean Eckles },
+  title = {Long ties, disruptive life events, and economic prosperity},
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {120},
+  number = {28},
+  pages = {e2211062120},
+  year = {2023},
+  doi = {10.1073/pnas.2211062120},
+  URL = {https://www.pnas.org/doi/abs/10.1073/pnas.2211062120},
+  eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2211062120},
+  abstract = {Social networks shape and reflect economic life. Prior studies have
+  identified long ties, which connect people who lack mutual contacts, as a correlate of
+  individuals’ success within firms and places’ economic prosperity. However, we lack
+  population-scale evidence of the individual-level link between long ties and
+  economic prosperity, and why some people have more long ties remains obscure. Here,
+  using a social network constructed from interactions on Facebook, we establish a
+  robust association between long ties and economic outcomes and study disruptive life
+  events hypothesized to cause formation of long ties. Consistent with prior
+  aggregated results, administrative units with a higher fraction of long ties tend to
+  have higher-income and economic mobility. Individuals with more long ties live in
+  higher-income places and have higher values of proxies for economic prosperity
+  (e.g., using more Internet-connected devices and making more donations).
+  Furthermore, having stronger long ties (i.e., with higher intensity of interaction)
+  is associated with better outcomes, consistent with an advantage from the structural
+  diversity constituted by long ties, rather than them being weak ties per se. We then
+  study the role of disruptive life events in the formation of long ties. Individuals
+  who have migrated between US states, have transferred between high schools, or have
+  attended college out-of-state have a higher fraction of long ties among their
+  contacts many years after the event. Overall, these results suggest that long ties
+  are robustly associated with economic prosperity and highlight roles for important
+  life experiences in developing and maintaining long ties.},
 	category={Refereed}
 }
+
+
+@article{yuan2023implications,
+  title={Implications of COVID-19 vaccination heterogeneity in mobility networks},
+  author={Yuan, Yuan and Jahani, Eaman and Zhao, Shengjia and Ahn, Yong-Yeol and Pentland, Alex Sandy},
+  journal={Communications Physics},
+  volume={6},
+  number={1},
+  pages={206},
+  year={2023},
+  publisher={Nature Publishing Group UK London},
+  abstract={Our study utilizes network science to examine how uneven vaccine distribution
+  affects mass vaccination strategies in the United States. Using mobility network data
+  and epidemiological models, we find that distributing a fixed quantity of additional
+  vaccines across Census Block Groups (CBGs) can vary case count reductions by up to
+  200l\%. This highlights the impact of vaccination heterogeneity in mobility networks
+  on epidemic outcomes. Our efficient algorithm identifies optimal vaccine
+  distribution for maximum case reduction. Simulations show a possible 9.5\% decrease
+  in case numbers with just a 1\% increase in the national vaccination rate if
+  vaccines are optimally distributed. This result surpasses those from other vaccine
+  distribution models. Our findings underline the need for policymakers to understand
+  the interaction between vaccination patterns and mobility networks, suggesting that
+  grasping geographical vaccine uptake variations could be as crucial as raising the
+  overall vaccination rate.},
+	category={Refereed}
+}
+
 
 @article{common_enemy,
   title={An Online experiment during the 2020 US--Iran crisis shows that exposure to common enemies can increase political polarization},
